--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,26 @@
 --- #YAML:1.0
-name:                KiokuDB-Backend-JSPON
-version:             0.01
-abstract:            ~
-license:             ~
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    File::NFSLock:                 0
-    IO::AtomicFile:                0
-    JSON:                          0
-    KiokuDB:                       0
-    Moose:                         0
-    MooseX::Types::Path::Class:    0
-    Path::Class:                   0
+name:               KiokuDB-Backend-JSPON
+version:            0.02
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    File::NFSLock:        0
+    IO::AtomicFile:       0
+    JSON:                 0
+    KiokuDB:              0.05
+    Moose:                0
+    MooseX::Types::Path::Class:  0
+    Path::Class:          0
+    Test::TempDir:        0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
